[package]
name = "eventific"
version = "0.1.18"
edition = '2018'
license = "MIT"
repository = "https://github.com/Joatin/eventific"
homepage = "https://github.com/Joatin/eventific"
description = "Eventific is a tool that gives you the needed building blocks for event sourcing"
authors = ["Joatin Granlund <granlundjoatin@gmail.com>"]
readme = "../README.md"
keywords = ["cqrs", "event-sourcing", "tokio", "futures", "eventific"]
categories = ["asynchronous", "database", "data-structures"]

[dependencies]
uuid = { version = "0.8", features = ["serde", "v4"] }
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3"
slog = "2"
serde = "1"
serde_derive = "1"
tokio = { version = "0.3", features = ["sync", "time", "signal", "stream"] }
colored = "1"
strum = "0.20"
thiserror = "1"
itertools = "0.9.0"

[dev-dependencies]
tokio = { version = "0.2", features = ["full"] }
sloggers = "0.3"
uuid = { version = "0.8", features = ["v4"]}
strum_macros = "0.20"

