[package]
name = "eventific"
version = "0.2.0"
edition = '2021'
license = "MIT"
repository = "https://github.com/Joatin/eventific"
homepage = "https://github.com/Joatin/eventific"
description = "Eventific is a tool that gives you the needed building blocks for event sourcing"
authors = ["Joatin Granlund <granlundjoatin@gmail.com>"]
readme = "../README.md"
keywords = ["cqrs", "event-sourcing", "tokio", "futures", "eventific"]
categories = ["asynchronous", "database", "data-structures"]


[dependencies]
eventific_macros = { version = "^0.2.0", path = "../eventific_macros" }
uuid = { version = "1.0", default-features = false }
async-trait = "0.1"
futures = { version = "0.3", default-features = false, features = ["alloc"] }
log = "0.4"
tokio = { version = "1.18", features = ["sync"] }
anyhow = { version = "1.0", default-features = false }

[dev-dependencies]
tokio = { version = "1.18", features = ["macros", "rt-multi-thread"] }
uuid = { version = "1.0", features = ["v4"] }
