[package]
name = "eventific_dynamo"
version = "0.1.0"
edition = '2018'
publish = false

[features]
integration_tests = []

[dependencies]
eventific = { version = "0.1.0", path="../eventific" }
uuid = { version = "0.7.4" }
failure = "0.1.5"
futures = "0.1.28"
rusoto_dynamodb = "0.40.0"
rusoto_core = "0.40.0"
slog = "2.5.0"
serde_json = "1.0.40"
serde = "1.0.95"
chrono = { version = "0.4.7", features = ["serde"] }

[dev-dependencies]
tokio = "0.1.22"
serde_derive = "1.0.95"
