[package]
name = "eventific_kafka"
version = "0.1.1"
edition = '2018'
license = "MIT"
repository = "https://github.com/Joatin/eventific"
homepage = "https://github.com/Joatin/eventific"
description = "Eventific is a tool that gives you the needed building blocks for event sourcing"
authors = ["Joatin Granlund <granlundjoatin@gmail.com>"]

[dependencies]
rdkafka = { version = "0.23", features = ["cmake-build"] }
eventific = { version = "0.1.4", path="../eventific" }
uuid = "0.8"
slog = "2.5"
futures = "0.3"
failure = "0.1"
