[package]
name = "eventific_postgres"
version = "0.1.3"
edition = '2018'
license = "MIT"
repository = "https://github.com/Joatin/eventific"
homepage = "https://github.com/Joatin/eventific"
description = "Eventific is a tool that gives you the needed building blocks for event sourcing"
authors = ["Joatin Granlund <granlundjoatin@gmail.com>"]

[features]
integration_tests = []

[dependencies]
eventific = { version = "0.1.4", path="../eventific" }
serde_json = "1.0"
serde = "1.0"
tokio-postgres = { version = "0.7", features = ["with-uuid-0_8", "with-serde_json-1", "with-chrono-0_4", "runtime"] }
tokio = { version = "1", features = ["sync", "rt"] }
parking_lot = "0.11"
futures = "0.3"
thiserror = "1"
tracing = "0.1"
bb8 = "0.7.0"
bb8-postgres = "0.7.0"

[dev-dependencies]
serde_derive = "1"
