[package]
name = "eventific-postgres"
version = "0.2.0"
edition = '2021'
license = "MIT"
repository = "https://github.com/Joatin/eventific"
homepage = "https://github.com/Joatin/eventific"
description = "Eventific is a tool that gives you the needed building blocks for event sourcing"
authors = ["Joatin Granlund <granlundjoatin@gmail.com>"]
readme = "../README.md"
keywords = ["cqrs", "event-sourcing", "tokio", "futures", "eventific"]
categories = ["asynchronous", "database", "data-structures"]

[dependencies]
eventific = { path = "../eventific", version = "0.2" }
tokio-postgres = { version = "0.7", features = ["with-uuid-1", "with-serde_json-1"] }
async-trait = "0.1"
uuid = { version = "1.0" }
anyhow = { version = "1.0" }
futures = { version = "0.3" }
tokio = { version = "1.18", features = ["rt"] }
bb8-postgres = "0.8"
serde_json = "1.0"
serde = { version = "1.0" }
log = "0.4"

[dev-dependencies]
tokio = { version = "1.18", features = ["macros", "rt-multi-thread"] }
uuid = { version = "1.0", features = ["v4"] }
serde = { version = "1.0", features = ["derive"] }
