[package]
name = "eventific_rabbitmq"
version = "0.1.0"
edition = '2018'
license = "MIT"
repository = "https://github.com/Joatin/eventific"
homepage = "https://github.com/Joatin/eventific"
description = "Eventific is a tool that gives you the needed building blocks for event sourcing"
authors = ["Joatin Granlund <granlundjoatin@gmail.com>"]

[features]
integration_tests = []

[dependencies]
eventific = { version = "0.1.4", path="../eventific" }
uuid = { version = "0.7.4", features = ["serde"] }
failure = "0.1.5"
futures = "0.1.28"
slog = "2.5.0"
tokio = "0.1.22"
lapin-futures = "0.26.10"

[dev-dependencies]
serde_derive = "1.0.95"
