[package]
name = "eventific_rabbitmq"
version = "0.1.6"
edition = '2018'
license = "MIT"
repository = "https://github.com/Joatin/eventific"
homepage = "https://github.com/Joatin/eventific"
description = "Eventific is a tool that gives you the needed building blocks for event sourcing"
authors = ["Joatin Granlund <granlundjoatin@gmail.com>"]

[[test]]
name = "eventific_rabbitmq_e2e"
path = "e2e/e2e.rs"
test = false
harness = true

[dependencies]
eventific = { version = "0.1.4", path="../eventific" }
futures = "0.3"
tokio = "1"
lapin = { version = "1.7", default-features = false }
tracing = "0.1"
tokio-amqp = "1"
strum = "0.20"
serde = "1.0"
serde_json = "1.0"

[dev-dependencies]
serde_derive = "1.0.95"
tokio = { version = "1", features = ["time", "rt", "macros", "rt-multi-thread"] }
tracing = { version = "0.1", features = ["log"] }
simplelog = "0.10.0"
